# lemin

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile_cmake  README.md  author  output.debug  shtest.sh  test_100-6_1000_20_20_80_80_5_no_z  test_spec_2
includes/: farm.h  graph.h  handle_input.h  input_errors.h  lemin.h  old_farm.h  old_handle_input.h  old_prepare_work_graph.h  old_solve.h  prepare_work_graph.h  print_way_ants.h  read_input.h  solve.h  t_farm.h  t_type.h  ways.h
includes/input/: input_errors.h  input_utils_basic.h  input_utils_supp.h  read_input.h
includes/solve/: bypass_node.h  restore_ways.h  reverse_new_way.h  solve.h
objects/: .depend
sources/: farm.c  handle_input.c  input_errors.c  lemin.c  main.c  old_farm.c  old_handle_input.c  old_lemin.c  old_prepare_work_graph.c  old_solve.c  prepare_work_graph.c  print_way_ants.c  read_input.c  solve.c  t_farm.c
sources/farm/: farm_del.c  farm_init.c  graph_init.c
sources/graph/: graph_access.c  graph_iter.c  graph_utils.c
sources/read_input/: input_errors.c  input_utils_basic.c  input_utils_supp.c  read_input.c
sources/solve/: bypass_node.c  restore_ways.c  reverse_new_way.c  solve.c
sources/ways/: print_result.c  t_enum_ways.c  t_way.c
test_maps/: test_spec_2
test_utils/: shtest.sh
tests/: test1  test_spec_1  test_spec_2
